# smart-cart

./: .gitignore  README.md  config.py  database.db  database.py  logger.py  main.py  models.py  pyproject.toml  scratch.py  smart-cart.ino
templates/: 404.html  cart.html  checkout.html  dashboard.html  database.sqlite.html  index.html  invalid_cart.html  items.html  line.html  pie.html
