[project]
name = "smart-cart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[all]>=0.119.0",
    "greenlet>=3.1.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.1",
    "sqlmodel>=0.0.24",
]
